--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
         "build": "vite build"
     },
     "dependencies": {
+        "@vueuse/core": "^10.9.0",
+        "pinia": "^2.1.7",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0"
     },
