--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,5 +10,5 @@ jobs:
           curl -X POST \
                -H "Content-Type: application/json" \
                -H "Authorization: Bearer ${{ secrets.DEPLOYMENT_PASSWORD }}" \
-               -d '{"type":"push","repository":"SK-Administrator", "payload":${{ toJson(github.event) }}}' \
+               -d '{"type":"push","repository":"SK-Administrator", "payload": {} }' \
                ${{ secrets.DEPLOYMENT_ENDPOINT }}
