Major rework: Nuxt migration
I am picking development up again. Built on the great baseplate that the Rabbit Network provided.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+node_modules
+logs
 .DS_Store
+.idea
+.env.local
+package-lock.json
+.env
+.obsidian
+.vscode
+
+server
