Sidebar design misc

--- a/frontend-nuxt/.env.example
+++ b/frontend-nuxt/.env.example
@@ -7,7 +7,8 @@ NUXT_SESSION_PASSWORD=
 # Database
 NUXT_DATABASE_HOST=
 NUXT_DATABASE_PORT=
-NUXT_DATABASE_NAME=
+NUXT_DATABASE_NAME_SKA=
+NUXT_DATABASE_NAME_SKP=
 NUXT_DATABASE_USERNAME=
 NUXT_DATABASE_PASSWORD=
 
