Connection to Overway (SSO) 1

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,37 +1,39 @@
-NITRO_PORT=9111
-NITRO_HOST=0.0.0.0
+NITRO_PORT=9099
+NITRO_HOST=localhost
 
-# Oauth
-NUXT_SESSION_PASSWORD=
+# Auth
+NUXT_SESSION_PASSWORD=""
+NUXT_PUBLIC_AUTH_PROVIDER_URL="http://localhost:9088"
 
 # Database
-NUXT_DATABASE_HOST=
-NUXT_DATABASE_PORT=
-NUXT_DATABASE_NAME_SKA=
-NUXT_DATABASE_NAME_SKP=
-NUXT_DATABASE_USERNAME=
-NUXT_DATABASE_PASSWORD=
+NUXT_DATABASE_HOST="127.0.0.1"
+NUXT_DATABASE_PORT=3306
+NUXT_DATABASE_USERNAME="root"
+NUXT_DATABASE_PASSWORD="root"
 
 # Mail
-NUXT_MAIL_HOST=
-NUXT_MAIL_USERNAME=
-NUXT_MAIL_PASSWORD=
+NUXT_MAIL_HOST="smtp.strato.com"
+NUXT_MAIL_USERNAME=""
+NUXT_MAIL_PASSWORD=""
 
 # MeiliSearch
-NUXT_MEILISEARCH_HOST=
-NUXT_MEILISEARCH_API_KEY=
-NUXT_MEILISEARCH_MASTER_KEY=
+NUXT_MEILISEARCH_HOST="https://search.stefankruik.com"
+NUXT_MEILISEARCH_API_KEY=""
+NUXT_MEILISEARCH_MASTER_KEY=""
 
 # Uplink (RabbitMQ)
-NUXT_UPLINK_HOST=
-NUXT_UPLINK_PORT=
-NUXT_UPLINK_USERNAME=
-NUXT_UPLINK_PASSWORD=
-NUXT_UPLINK_EXCHANGE=
-NUXT_UPLINK_ROUTER=
+NUXT_UPLINK_HOST="amqp.stefankruik.com"
+NUXT_UPLINK_PORT=5672
+NUXT_UPLINK_USERNAME="app-administrator"
+NUXT_UPLINK_PASSWORD=""
+NUXT_UPLINK_EXCHANGE=""
+NUXT_UPLINK_ROUTER="Administrator"
 
 # CDN SFTP
-NUXT_SFTP_HOST=
-NUXT_SFTP_PORT=
-NUXT_SFTP_USERNAME=
-NUXT_SFTP_PASSWORD=
+NUXT_SFTP_HOST="cdn.stefankruik.com"
+NUXT_SFTP_PORT=22
+NUXT_SFTP_USERNAME="admin-cdn"
+NUXT_SFTP_PASSWORD=""
+
+# RTD WebSocket
+NUXT_PUBLIC_WS_URL="ws://localhost:9099/_ws"
