--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sk-administrator",
     "description": "SK Administrator",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "author": "Stefan Kruik",
     "repository": {
         "type": "git",
@@ -21,10 +21,11 @@
         "mjml": "node mjml.js"
     },
     "dependencies": {
+        "@svkruik/sk-uplink-connector": "0.1.1",
+        "@svkruik/sk-platform-formatters": "0.0.4",
         "@nuxt/image": "^1.11.0",
         "@pinia/nuxt": "^0.11.2",
         "@vueuse/core": "^13.9.0",
-        "amqplib": "^0.10.9",
         "mariadb": "^3.4.5",
         "meilisearch": "^0.53.0",
         "mitt": "^3.0.1",
@@ -42,7 +43,6 @@
         "zod": "^4.1.11"
     },
     "devDependencies": {
-        "@types/amqplib": "^0.10.7",
         "@types/mjml": "^4.7.4",
         "@types/node": "^22.14.1",
         "@types/nodemailer": "^7.0.1",
