--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,7 @@
         "dev": "nuxt dev",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
-        "postinstall": "nuxt prepare",
-        "mjml": "node mjml.js"
+        "postinstall": "nuxt prepare"
     },
     "dependencies": {
         "@nuxt/image": "^1.11.0",
@@ -29,13 +28,11 @@
         "@vueuse/core": "^13.9.0",
         "meilisearch": "^0.53.0",
         "mitt": "^3.0.1",
-        "mjml": "^4.16.1",
-        "nodemailer": "^7.0.6",
         "nuxt": "^4.1.2",
         "nuxt-auth-utils": "^0.5.25",
         "nuxt-cron": "^1.8.0",
-        "pinia": "^3.0.3",
-        "pinia-plugin-persistedstate": "^4.5.0",
+        "pinia": "^3.0.4",
+        "pinia-plugin-persistedstate": "^4.7.1",
         "sharp": "^0.34.4",
         "ssh2-sftp-client": "^12.0.1",
         "vue": "^3.5.22",
@@ -43,9 +40,7 @@
         "zod": "^4.1.11"
     },
     "devDependencies": {
-        "@types/mjml": "^4.7.4",
         "@types/node": "^22.14.1",
-        "@types/nodemailer": "^7.0.1",
         "@types/ssh2-sftp-client": "^9.0.5",
         "@vitejs/plugin-vue": "^6.0.1",
         "typescript": "^5.9.2"
